src/test/deca/syntax/parser/valid/simple_readfloat.deca
// Parser test on readFloat

{
    readFloat();
}