src/test/deca/syntax/parser/invalid/inst_expr_while_empty_cond.deca
// Parser test, while with empty condition

{
    while () { print(5);};
}